@@ -1779,6 +1779,73 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+specifier|public
+name|void
+name|testDoubleRetrieveWithDifferentConfigurations
+parameter_list|()
+block|{
+comment|// IVY-315
+name|_project
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.dep.file"
+argument_list|,
+literal|"test/java/fr/jayasoft/ivy/ant/ivy-doubleretrieve.xml"
+argument_list|)
+expr_stmt|;
+name|_retrieve
+operator|.
+name|setConf
+argument_list|(
+literal|"compile"
+argument_list|)
+expr_stmt|;
+name|_retrieve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|_retrieve
+operator|=
+operator|new
+name|IvyRetrieve
+argument_list|()
+expr_stmt|;
+name|_retrieve
+operator|.
+name|setProject
+argument_list|(
+name|_project
+argument_list|)
+expr_stmt|;
+name|_retrieve
+operator|.
+name|setCache
+argument_list|(
+name|_cache
+argument_list|)
+expr_stmt|;
+name|_retrieve
+operator|.
+name|setPattern
+argument_list|(
+name|RETRIEVE_PATTERN
+argument_list|)
+expr_stmt|;
+name|_retrieve
+operator|.
+name|setConf
+argument_list|(
+literal|"compile,unittest"
+argument_list|)
+expr_stmt|;
+name|_retrieve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+block|}
 comment|// creates an empty file, creating parent directories if necessary
 specifier|private
 name|void
