@@ -10,6 +10,8 @@ for detailed view of each issue, please consult http://jira.jayasoft.org/
 - IMPROVE: Measure code coverage (IVY-323)
 - IMPROVE: Add a 'conf' parameter to the ivy 'publish' ant task (IVY-322) (thanks to Emmanuel Pellereau)
 
+- FIX: IVY complains about non-existent reports in the cache directory (IVY-315)
+
    version 1.4 - 2006-10-09
 =====================================
 Version 1.4-RC2 has been promoted to 1.4 on 2006-10-09, with documentation update.
